# ESW-course

./: .gitignore  CMakeLists.txt  README.md  meson.build  shell.nix
hw1-Profiling/: .gitignore
hw1-Profiling-cpp/: .gitignore  ellipse.diff.txt
hw1-Profiling-cpp/ellipses/: Dockerfile  meson.build
hw1-Profiling-cpp/ellipses/ellipse/: ellipse.cpp
hw1-Profiling/ellipses/: Makefile
hw1-Profiling/ellipses/ellipse/: ellipse.h  imgproc.cpp
hw2-Epoll/: EpollConnection.cc  EpollConnection.hh  EpollEntry.cc  EpollEntry.hh  EpollInstance.cc  EpollInstance.hh  EpollSocket.cc  EpollSocket.hh  EpollStdIn.cc  EpollStdIn.hh  EpollTimer.cc  EpollTimer.hh  main.cc  meson.build
hw3-Rcu/: Makefile  README  list.cpp  list.hpp  main.cpp  rcu.diff.txt
hw4-Benchmarking/: MatrixMultiplicationBenchmark.java  measurements.json  results.json
hw5-Serialization/: .gitignore  Dockerfile  Makefile  README.md  meson.build  shell.nix
hw5-Serialization/.run/: Docker Image.run.xml
hw5-Serialization/src/main/avro/: measurements.avsc
hw5-Serialization/src/main/cpp/: dataset.cpp  dataset.h  datatype.h  jsonserializable.h  main.cpp  measurementinfo.cpp  measurementinfo.h  measurements.av.h  measurements.pb.h  measurements.proto  meson.build
hw5-Serialization/src/main/java/cz/esw/serialization/handler/: AvroDataHandler.java  ProtoDataHandler.java
hw5-Serialization/src/main/proto/: measurements.pb.cc
hw6-Profiling-java/: mosp.diff.txt
hw7-Non-blocking-hash-set/: pom.xml
hw7-Non-blocking-hash-set/src/main/java/cz/cvut/fel/esw/nonblock/map/: JcstressStringSetTest.java  NonblockStringSet.java  README.md  SynchronizedStringSet.java
hw7-Non-blocking-hash-set/src/test/java/cz/cvut/fel/esw/nonblock/map/: SingleThreadStringSetTest.java  VmlensStringSetTest.java
hw8-Vector-api/: pom.xml
hw8-Vector-api/src/main/java/cz/cvut/fel/esw/: Main.java  Matrix.java  TimeUtil.java  Utils.java
hw8-Vector-api/src/main/test/: UtilsTest.java
hw9-Efficient-server/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  request_1.pb  request_10.pb  request_11.pb  request_12.pb  request_13.pb  request_14.pb  request_2.pb  request_3.pb  request_4.pb  request_5.pb  request_6.pb  request_7.pb  request_8.pb  request_9.pb
hw9-Efficient-server-cpp/: .gitignore  dpkg-check.sh
hw9-Efficient-server-cpp/server-src/: main.cpp
hw9-Efficient-server-cpp/server-src/epoll/: EpollConnectEntry.cpp  EpollConnectEntry.hh
hw9-Efficient-server-cpp/server-src/grid/: GridApi.cpp  GridModel.hh  GridProcess.cpp  GridSearch.cpp
hw9-Efficient-server-cpp/server-src/logger/: Logger.hh
hw9-Efficient-server-cpp/server-src/protobuf/: scheme.pb.h  scheme.proto
hw9-Efficient-server-cpp/server-src/robin/: robin_hash.h  robin_map.h
hw9-Efficient-server-cpp/server-src/threadpool/: ThreadPool.cpp  ThreadPool.hh
hw9-Efficient-server-kt/: README.md  build.gradle.kts  settings.gradle.kts
hw9-Efficient-server-kt/gradle/: libs.versions.toml
hw9-Efficient-server-kt/gradle/wrapper/: gradle-wrapper.properties
hw9-Efficient-server-kt/src/main/java/esw/: Scheme.java
hw9-Efficient-server-kt/src/main/kotlin/: Grid.kt  Logger.kt  Main.kt
hw9-Efficient-server-kt/src/main/resources/: logback.xml
hw9-Efficient-server-kt/test/: walk10nodes500.pbf  walk1nodes100-2.pbf  walk1nodes3-2.pbf  walk2nodes6.pbf
hw9-Efficient-server/server-src/: CMakeLists.txt  config.cmake  main.cpp
hw9-Efficient-server/server-src/epoll/: EpollConnectEntry.cpp  EpollConnectEntry.hh  EpollEntry.hh  EpollInstance.cpp  EpollInstance.hh  EpollModel.hh  EpollSocketEntry.cpp  EpollSocketEntry.hh
hw9-Efficient-server/server-src/grid/: GridApi.cpp  GridConversions.cpp  GridModel.hh  GridProcess.cpp  GridProtobuf.cpp  GridSearch.cpp  robin_growth_policy.h  robin_hood.h
hw9-Efficient-server/server-src/locker/: Locker.hh  ReentrantSharedLocker.cpp  ReentrantSharedLocker.hh
hw9-Efficient-server/server-src/logger/: Logger.hh
hw9-Efficient-server/server-src/threadpool/: ThreadPool.cpp  ThreadPool.hh
hw9-Efficient-server/src/: CMakeLists.txt  config.cmake  main.cpp
hw9-Efficient-server/src/epoll/: EpollConnection.cpp  EpollInstance.cpp  EpollModel.hh  EpollSocket.cpp
hw9-Efficient-server/src/grid/: GridApi.cpp  GridConversions.cpp  GridModel.hh  GridProtobuf.cpp  GridSearch.cpp
hw9-Efficient-server/src/locker/: Locker.hh
hw9-Efficient-server/src/logger/: Logger.hh
hw9-Efficient-server/src/protobuf/: CMakeLists.txt  scheme.pb.cc
hw9-Efficient-server/src/threadpool/: ThreadPool.hh
protobuf/: scheme.proto
src/: main.cpp  meson.build
src/data/: DataGridPath.cpp  DataGridProtobuf.cpp  DataGridUtil.cpp
src/epoll/: EpollConnection.cpp  EpollConnection.hh  EpollInstance.cpp  EpollInstance.hh  EpollSocket.cpp
uknown/: README.md  meson.build  shell.nix
uknown/protobuf/: scheme.proto
uknown/src/: main.cpp  meson.build
uknown/src/data/: DataGrid.hh  DataGridInsertion.cpp  DataGridLogging.cpp  DataGridUtil.cpp
uknown/src/epoll/: EpollEntry.cpp  EpollEntry.hh  EpollSocket.hh
uknown/src/protobuf/: scheme.pb.cc  scheme.pb.h
uknown/src/threadpool/: ThreadPool.cpp  ThreadPool.hh
